syntax = "proto3";

package response;

import "protobuf/common.proto";

// IPC response packet.
message WireIpcResponse {
  // Message identifier.
  uint64 message_id = 1;
  // Response result.
  oneof result {
    // Error result.
    WireIpcResponseError error = 2;
    // Result body.
    WireIpcResponseBody body = 3;
  }
}

// IPC response body.
message WireIpcResponseBody {
  // Inner values.
  oneof inner {
    // App status.
    WireStatusBody status = 1;
    // Reply to a ping.
    common.WireVoidBody pong = 2;
    // Request to open a URL.
    WireOpenUrl open_url = 3;
    // List accounts body.
    WireAccountList list_accounts = 4;
    // Authenticate body.
    WireCommandOutcome authenticate = 5;
    // Lock body.
    WireCommandOutcome lock = 6;
  }
}

// IPC response error.
message WireIpcResponseError {
  // Error code.
  int32 code = 1;
  // Error message.
  string message = 2;
}

// Result of a status query.
message WireStatusBody {
  // Whether the app is running.
  bool app = 1;
  // Whether the IPC channel is responding.
  bool ipc = 2;
}

// Result of an open command.
message WireOpenUrl {
  // Whether the open command was successful.
  bool is_ok = 1;
}

// List of accounts.
message WireAccountList {
  // Collection of accounts.
  repeated WireAccountInfo accounts = 1;
}

// Outcome of a delegated command.
enum WireCommandOutcome {
  // Account not found.
  NotFound = 0;
  // Already authenticated.
  AlreadyAuthenticated = 1;
  // Not authenticated.
  NotAuthenticated = 2;
  // Authentication success.
  Success = 3;
  // Authentication failed.
  Failed = 4;
  // User canceled.
  Canceled = 5;
  // Timed out waiting for user input.
  TimedOut = 6;
  // Too many attempts.
  Exhausted = 7;
  // Error getting user input.
  InputError = 8;
}

// Information about an account.
message WireAccountInfo {
  // Public identity information.
  WirePublicIdentity public_id = 1;
  // Whether the account is currently authenticated.
  bool authenticated = 2;
}

// Public identity for an account.
message WirePublicIdentity {
  // Account address.
  string address = 1;
  // Account label.
  string label = 2;
}
